--- a/ctf-entry/views/index.jade
+++ b/ctf-entry/views/index.jade
@@ -14,5 +14,11 @@ block content
   <a href="/?page=binary.html">9. Binary</a> &nbsp
   <a href="/?page=network.html">10. Network</a> &nbsp
   <a href="/?page=crawler-stopper.html">11. Crawler Stopper</a> &nbsp
+  <a href="/?page=sqli.html">12. sqli</a> &nbsp
+  <a href="/?page=md5.html">13. php is best language</a> &nbsp
+  <a href="/?page=header.html">14. http header</a> &nbsp
+  <a href="/?page=download.html">15. download center</a> &nbsp
+  <a href="/?page=brute.html">16. brute force attack</a> &nbsp
+
   p #{page}
   p !{content}
